fix(metadata-events): java 8 back compat